--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@fontsource/inter": "^5.0.16",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "node": "^22.19.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
